k8s/backend-api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  labels:
    app: backend-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: ghcr.io/cs-muic/scalable-p1-stellardropthebeat/p1-backend:latest
      imagePullSecrets:
        - name: myregistrykey
