k8s/backend-api-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-api
spec:
  selector:
    app: backend-api
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  5000
