k8s/backend-rec-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-rec
spec:
  selector:
    app: backend-rec
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 5000
