k8s/mariadb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
spec:
  ports:
  - port: 3306
  selector:
    app: mariadb
  clusterIP: None
